--- a/others/slovnikCudzichSlov/ToS.html
+++ b/others/slovnikCudzichSlov/ToS.html
@@ -19,13 +19,8 @@
         By downloading or using the app, these terms will
         automatically apply to you – you should make sure therefore
         that you read them carefully before using the app. You’re not
-        allowed to copy or modify the app, any part of the app, or
-        our trademarks in any way. You’re not allowed to attempt to
-        extract the source code of the app, and you also shouldn’t try
-        to translate the app into other languages or make derivative
-        versions. The app itself, and all the trademarks, copyright,
-        database rights, and other intellectual property rights related
-        to it, still belong to Michal Géci.
+        allowed to copy or modify the app. You’re not allowed to attempt to
+        extract the source code of the app. The app itself, still belong to Michal Géci.
     </p>
     <p>
         Michal Géci is committed to ensuring that the app is
@@ -48,10 +43,6 @@
         that the Slovník cudzích slov app won’t work properly or at all.
     </p>
     <div>
-        <p>
-            The app does use third-party services that declare their
-            Terms and Conditions.
-        </p>
         <p>
             Link to Terms and Conditions of third-party service
             providers used by the app
