--- a/others/slovnikCudzichSlov/privacy_policy.html
+++ b/others/slovnikCudzichSlov/privacy_policy.html
@@ -35,8 +35,7 @@
     </p>
     <p>
         The terms used in this Privacy Policy have the same meanings
-        as in our Terms and Conditions, which are accessible at
-        Slovník cudzích slov unless otherwise defined in this Privacy Policy.
+        as in our <a href="ToS.html">Terms and Conditions</a>.
     </p>
     <p><strong>Information Collection and Use</strong></p>
     <p>
